# disconnect-app

./: .env  Cargo.toml  README.md  diesel.toml
backing-service/: docker-compose.yaml
migrations/: initial-data.sql
migrations/2024-06-17-044822_create_memberships/: up.sql
migrations/2024-06-17-044859_create_fellows/: down.sql  up.sql
migrations/2024-06-18-055857_create_members/: up.sql
migrations/2024-07-18-102448_app-user/: down.sql  up.sql
src/: main.rs
src/dao/: app_users_dao.rs  fellow_dao.rs  member_dao.rs  memberdao.rs  membership_dao.rs  membershipdao.rs  mod.rs  userdao.rs
src/db/: initial_data.rs  initialdata.rs  mod.rs  pool.rs  schema.rs
src/db/model/: app_user.rs  fellow_model.rs  member.rs  member_model.rs  membership.rs  membership_model.rs  mod.rs
src/domain/: fellow.rs  member.rs  membership.rs
src/model/: fellow.rs  member.rs  membership.rs  mod.rs  person.rs  user.rs  volunteer.rs
src/utils/: date_util.rs
src/web/: mod.rs  routes.rs
src/web/jwt/: app_users_dao.rs  claim.rs  middleware.rs  mod.rs  request.rs  route.rs  service.rs  system_user.rs
