[package]
name = "disconnect-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.28.0", features = ["full"] }
typed-builder = "0.18.2"
tokio-postgres = "0.7.10"
deadpool-postgres = "0.14.0"
diesel = { version = "2.2.1", features = ["postgres", "r2d2", "chrono"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"] }