[package]
name = "disconnect-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.28.0", features = ["full"] }
typed-builder = "0.18.2"
tokio-postgres = "0.7.10"
deadpool-postgres = "0.14.0"
diesel = { version = "2.2.1", features = ["postgres", "r2d2", "chrono"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
jsonwebtoken = "8"
actix-web = "4.8.0"
actix-service = "2.0.2"

[dependencies.role_guard_macro]
path = "../role_guard_macro" 

